fixed walljump coyote time

--- a/frontend/styles/style.css
+++ b/frontend/styles/style.css
@@ -12,18 +12,46 @@
   --text-on-action: #f1e8d4;
 }
 
-[data-theme="dark"] {
-  --bg-primary: #2A2722;
-  --bg-accent: #2A2722;
-  --bg-level: #659BFF;
+[data-theme="cream"] {
+  --bg-primary: #f1e8d4;
+  --bg-accent: #cbc3b0;
+  --bg-level: #cae3f6;
 
-  --action: white;
+  --action: black;
 
-  --border: white;
+  --border: black;
 
-  --text-on-primary: white;
-  --text-on-accent: white;
-  --text-on-action: #2A2722;
+  --text-on-primary: black;
+  --text-on-accent: black;
+  --text-on-action: #f1e8d4;
+}
+
+[data-theme="blue"] {
+  --bg-primary: #a8b7d3;
+  --bg-accent: #94a1c3;
+  --bg-level: #a3c9e5;
+
+  --action: black;
+
+  --border: black;
+
+  --text-on-primary: black;
+  --text-on-accent: black;
+  --text-on-action: #a8b7d3;
+}
+
+[data-theme="coffee"] {
+  --bg-primary: #2f271b;
+  --bg-accent: #765d41;
+  --bg-level: #765d41;
+
+  --action: #dad0b0;
+
+  --border: #dad0b0;
+
+  --text-on-primary: #dad0b0;
+  --text-on-accent: #dad0b0;
+  --text-on-action: #2f271b;
 }
 
 * {
